src/commands/snapshots/csx__commands__add__tests__manifest_snapshot_algorithm_lens.snap
---
source: src/commands/add.rs
expression: template_algorithm_lens_manifest(COMPONENT_NAME).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/algorithm_lens.json
version: v1
metadata:
  label: Additional
  type: algorithm_lens
  description: ''
  tags:
  - Ethereum
  - Account
datasource:
  methods:
  - id: sample_snapshot_indexer_icp
    identifier: 'get_last_snapshot : () -> (record { value : text; timestamp : nat64 })'
    candid_file_path: null

