src/commands/snapshots/csx__commands__add__tests__manifest_snapshot_relayer.snap
---
source: src/commands/add.rs
expression: template_relayer_manifest(COMPONENT_NAME).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/relayer.json
version: v1
metadata:
  label: Additional
  type: relayer
  description: ''
  tags:
  - Oracle
  - snapshot
datasource:
  location:
    id: sample_snapshot_indexer_evm
  method:
    identifier: 'get_last_snapshot : () -> (record { value : text; timestamp : nat64 })'
    interface: null
    args: []
destination:
  network_id: 80001
  type: uint256
  oracle_address: 0539a0EF8e5E60891fFf0958A059E049e43020d9
  rpc_url: https://polygon-mumbai.infura.io/v3/${INFURA_MUMBAI_RPC_URL_KEY}
  method_name: null
  interface: null
interval: 3600
conversion_parameter: null
lens_targets: null
cycles: null

