src/commands/snapshots/csx__commands__add__tests__manifest_snapshot_snapshot_indexer_https.snap
---
source: src/commands/add.rs
expression: template_snapshot_indexer_https_manifest(COMPONENT_NAME).to_str_as_yaml().unwrap()
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/horizonx-tech/chainsight-cli/main/resources/schema/snapshot_indexer_https.json
version: v1
metadata:
  label: Additional
  type: snapshot_indexer_https
  description: ''
  tags:
  - coingecko
  - DAI
  - USD
datasource:
  url: https://api.coingecko.com/api/v3/simple/price
  headers:
    Content-Type: application/json
  queries:
    ids: dai
    vs_currencies: usd
interval: 3600
cycles: null

